# virtual-trader

./: .coveragerc  .dockerignore  .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.docker/: dockerfile  dockerfile.prod
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docker-image.yaml  test.yaml
app/: main.py
app/api/: healthcheck.py
app/api/api_V1/: api.py
app/api/api_V1/endpoints/: auth.py  items.py  order.py  position.py  ticker_price.py  user.py
app/config/: database.py  jwt.py  nasdaq.py  settings.py
app/crud/: __init__.py  base.py  crud_item.py  crud_order.py  crud_order_position.py  crud_position.py
app/db/: base_class.py  session.py  users.py
app/helpers/: ticker_price.py
app/models/: item.py  order.py  order_position.py  position.py
app/models/types/: custom_datetime.py
app/schemas/: __init__.py  historical_data.py  item.py  order.py  order_position.py  position.py  token.py  user.py
app/services/market/: client.py
app/services/market/schemas/: __init__.py  quote.py  summary.py
app/utils/: __init__.py  auth.py  decimal.py  exceptions.py  jwt.py
db/migrations/: 20220419223525_create_items_table.sql  20220421153119_create_order_table.sql  20220421161040_create_position_table.sql  20220422011121_create_rel_position_order_table.sql
tests/: conftest.py
tests/api/api_v1/: test_items.py  test_order.py  test_position.py  test_ticker_price.py
tests/crud/: test_item.py
tests/factories/: base.py
tests/utils/: item.py  utils.py
