[tool.poetry]
name = "virtual-trader"
version = "0.1.0"
description = "NASDAQ virtual trading environment"
authors = [ "Martin de J <martinre2s@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
SQLAlchemy = "^1.4.35"
pendulum = "^2.1.2"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.3"
retrying = "^1.3.3"
secure = "^0.3.0"
uvicorn = "^0.17.6"
sentry-sdk = "^1.5.10"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ipython = "^8.2.0"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
factory-boy = "^3.2.1"
pre-commit = "^2.18.1"
commitizen = "^2.24.0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80

[tool.black]
line-length = 80

[tool.interrogate]
ignore-init-module = true
ignore-init-method = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 50
exclude = ["app/config"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = true
quiet = false
whitelist-regex = []
color = true


[tool.vulture]
ignore_decorators = ["@app.route", "@require_*"]
paths = ["app", "tests"]
ignore_names = ["dialect"]
min_confidence = 80
sort_by_size = true
verbose = false

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$major.$minor.$patch"
version_files = [
    "app/__init__.py",
    "pyproject.toml:version"
]

[tool.pytest]
addopts = "--cov=app --cov-report html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
